@@ -1,3 +1,7 @@
+2016-04-01  Steve Lhomme  <slhomme@matroska.org>
+
+        * KaxSemantic: add the new FieldOrder element.
+
 2015-11-21  Moritz Bunkus  <moritz@bunkus.org>
 
         * KaxVersion.cpp: in order to enable deterministic builds the
